# lvgl

./: README.md
helloworld/: .gitignore  CMakeLists.txt  file_list_gen.cmake  helloworld.c  helloworld.h  helloworld_gen.c  helloworld_gen.h  project.xml
helloworld/components/: README.md
helloworld/fonts/: README.md  poppins_ttf_data.c
helloworld/images/: README.md  carewell_data.c
helloworld/preview-bin/: .hash  lved-runtime.js  lved-runtime.wasm
helloworld/screens/: README.md  main_screen.xml  main_screen_gen.c  main_screen_gen.h  temp.txt  test_screen.xml  test_screen_gen.c  test_screen_gen.h
helloworld/widgets/: README.md
ui/: globals.xml  project_local.xml
ui/screens/: output.xml
